# oms-rust

./: Cargo.toml
src/: dto.rs  errors.rs  lib.rs  main.rs  models.rs  repository.rs  types.rs
src/dto/: products_dto.rs
src/repository/: inventory_repository.rs  product_repository.rs
