[package]
name = "oms-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "derive",
  "macros",
  "time",
] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["macros", "serde"] }
tokio = { version = "1.51.0", features = ["full"] }
typesafe_builder = "1.6.0"
